k8s/99-deployment-local/dashboards-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboards-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/rewrite-target: /
    # We are using our self-signed certificate from 'local-ip-certificate'
spec:
  tls:
    - hosts:
        - raspi5.local
      secretName: local-ip-tls   # Must match the 'secretName' from certificate-local-ip.yaml
  rules:
    - host: raspi5.local
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
